update readme to include javafx development instruction